design changes made to portfolio

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Creative - Start Bootstrap Theme</title>
+  <title>Carlos Santana Portfolio</title>
 
   <!-- Font Awesome Icons -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -43,10 +43,19 @@
             <a class="nav-link js-scroll-trigger" href="#services">Tech Knowledge</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact">GitHub</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact">Resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact">LinkedIn</a>
           </li>
         </ul>
       </div>
@@ -76,7 +85,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0"> About Me</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">I am 26 years old and I live in St.Augustine Florida. Since I was a child computers have always been a passion. As I have gotten older my drive to understand what is happening under the hood has only become stronger. I enjoy programming because building the most simplistic application can defeat some of the most complex problems in the world. </p>
+          <p class="text-white-20 mb-4">I am 26 years old and I live in St.Augustine Florida. Since I was a child computers have always been a passion. As I have gotten older my drive to understand what is happening under the hood has only become stronger. I enjoy programming because building the most simplistic application can defeat some of the most complex problems in the world. </p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="https://docs.google.com/document/d/1JP26Fze8WydVnoiyP03waTgBKlscqhxAbtSKqgl7qzk/edit">View Resume</a>
         </div>
       </div>
@@ -118,17 +127,130 @@
             <p class="text-muted mb-0">Knowlege in HTML and CSS with proper semantics</p>
           </div>
         </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fab fa-node-js" style="font-size:70px;color:"></i>
+            <h3 class="h4 mb-2">Node.js</h3>
+            <p class="text-muted mb-0">Knowledge in Node.js backend with Express</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fab fa-less" style="font-size:70px;color:#1D3F6C"></i>
+            <h3 class="h4 mb-2">Less</h3>
+            <p class="text-muted mb-0">Knowledge in Node.js backend with Express</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fab fa-envira" style="font-size:70px;color:green"></i>
+            <h3 class="h4 mb-2">SpringBoot</h3>
+            <p class="text-muted mb-0">Knowledge in Node.js backend with Express</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fab fa-sass" style="font-size:70px;color:#1D3F6C"></i>
+            <h3 class="h4 mb-2">Sass</h3>
+            <p class="text-muted mb-0">Knowledge in Node.js backend with Express</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
 
+  <!-- Project Section -->
+   <section id="portfolio">
+      <div class="container-fluid p-0">
+        <div class="row no-gutters">
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
+             <img class="img-fluid" src="https://images.unsplash.com/photo-1563313285-4c1b4074b898?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1510&q=80" alt="">
+             <div class="portfolio-box-caption">
+               <div class="project-category text-white-50">
+               Category
+              </div>
+               <div class="project-name">
+                 Project Name
+               </div>
+            </div>
+          </a>
+         </div>
+         <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
+             <img class="img-fluid" src="https://images.unsplash.com/photo-1563313285-4c1b4074b898?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1510&q=80" alt="">
+           <div class="portfolio-box-caption">
+                <div class="project-category text-white-50">
+                 Category
+                </div>
+               <div class="project-name">
+                Project Name
+                </div>
+              </div>
+           </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+           <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
+             <img class="img-fluid" src="https://images.unsplash.com/photo-1563313285-4c1b4074b898?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1510&q=80" alt="">
+              <div class="portfolio-box-caption">
+                <div class="project-category text-white-50">
+                  Category
+                </div>
+                <div class="project-name">
+                  Project Name
+                </div>
+              </div>
+           </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
+             <img class="img-fluid" src="https://images.unsplash.com/photo-1563313285-4c1b4074b898?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1510&q=80" alt="">
+             <div class="portfolio-box-caption">
+                <div class="project-category text-white-50">
+                  Category
+               </div>
+              <div class="project-name">
+                  Project Name
+               </div>
+             </div>
+           </a>
+         </div>
+        <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
+             <img class="img-fluid" src="https://images.unsplash.com/photo-1563313285-4c1b4074b898?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1510&q=80" alt="">
+              <div class="portfolio-box-caption">
+                <div class="project-category text-white-50">
+                  Category
+               </div>
+               <div class="project-name">
+                 Project Name
+               </div>
+              </div>
+            </a>
+         </div>
+         <div class="col-lg-4 col-sm-6">
+           <a class="portfolio-box" href="https://github.com/use-my-tools-lambda-build-week/Use-My-Tools-UI-Carlos">
+             <img class="img-fluid" src="https://images.unsplash.com/photo-1563313285-4c1b4074b898?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1510&q=80" alt="">
+             <div class="portfolio-box-caption p-3">
+               <div class="project-category text-white-50">
+                 Market Landing Page
+                </div>
+                <div class="project-name">
+                  ToolShed
+                </div>
+              </div>
+            </a>
+         </div>
+        </div>
+      </div>
+   </section>
 
   <!-- Contact Section -->
   <section class="page-section" id="contact">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="mt-0">Get In Touch!</h2>
+          <h2 class="mt-0">Lets Get In Touch!</h2>
           <hr class="divider my-4">
           <p class="text-muted mb-5"></p>
         </div>
@@ -136,13 +258,18 @@
       <div class="row">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
           <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <h5>Call and Text</h5>
-          <div>+1 (904) 206-9733</div>
+          <h5>Call or Text</h5>
+          <div>+1 (904) 806-9733</div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <h5>Email</h5>
           <a class="d-block" href="mailto:carlossantana987@outlook.com">carlossantana987@outlook.com</a>
+        </div>
+        <div class="col-lg-4 mr-auto text-center">
+          <i class="fab fa-github fa-3x mb-3 text-muted"></i>
+          <h5>Github</h5>
+          <a class="d-block" href="https://github.com/Carlossantana987">Carlossantana987</a>
         </div>
       </div>
     </div>
