--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-
+    <link
+        rel="icon"
+        type="image/png"
+        href="images/logo-via-logohub.png"
   <title>Carlos Santana Portfolio</title>
 
   <!-- Font Awesome Icons -->
