--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link
         rel="icon"
         type="image/png"
-        href="images/logo-via-logohub.png"
-  <title>Carlos Santana Portfolio</title>
+        href="images/logo-via-logohub.png" />
+<!--  <title>Carlos Santana Portfolio</title>-->
 
   <!-- Font Awesome Icons -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -275,6 +275,24 @@
           <a class="d-block" href="https://github.com/Carlossantana987">Carlossantana987</a>
         </div>
       </div>
+        <p class="text-muted mb-5"></p>
+        <div class="row">
+            <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
+                <i class="fas fa-file fa-3x mb-3 text-muted"></i>
+                <h5>Resume</h5>
+                <a class="d-block" href="resume/Carlos_Santana_Resume (1).pdf">Resume</a>
+            </div>
+            <div class="col-lg-4 mr-auto text-center">
+                <i class="fab fa-linkedin fa-3x mb-3 text-muted"></i>
+                <h5>LinkedIn</h5>
+                <a class="d-block" href="https://www.linkedin.com/in/carlos-santana-5468019b/">Profile</a>
+            </div>
+            <div class="col-lg-4 mr-auto text-center">
+                <i class="fas fa-file fa-3x mb-3 text-muted"></i>
+                <h5>Hmm</h5>
+                <a class="d-block" href="https://github.com/Carlossantana987">Carlossantana987</a>
+            </div>
+        </div>
     </div>
   </section>
 
