--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
+            <img src="images/profile blackbackground edit.jpg" alt="Avatar" class="avatar">
           <h1 class="text-uppercase text-white font-weight-bold">Carlos Santana</h1>
           <hr class="divider my-4">
         </div>
@@ -89,7 +90,7 @@
           <h2 class="text-white mt-0"> About Me</h2>
           <hr class="divider light my-4">
           <p class="text-white-20 mb-4">I am 26 years old and I live in St.Augustine Florida. Since I was a child computers have always been a passion. As I have gotten older my drive to understand what is happening under the hood has only become stronger. I enjoy programming because building the most simplistic application can defeat some of the most complex problems in the world. </p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="https://docs.google.com/document/d/1JP26Fze8WydVnoiyP03waTgBKlscqhxAbtSKqgl7qzk/edit">View Resume</a>
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="resume/Carlos_Santana_Resume (1).pdf">View Resume</a>
         </div>
       </div>
     </div>
@@ -167,79 +168,79 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters">
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-             <img class="img-fluid" src="https://images.unsplash.com/photo-1563313285-4c1b4074b898?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1510&q=80" alt="">
+            <a class="portfolio-box" href="images/smartmockups_k07pqcj5.jpg">
+             <img class="img-fluid" src="images/smartmockups_k07pqcj5.jpg" alt="">
              <div class="portfolio-box-caption">
-               <div class="project-category text-white-50">
-               Category
+               <div class="project-category">
+               Landing Marketing Page
               </div>
                <div class="project-name">
-                 Project Name
+                 Toolshed
                </div>
             </div>
           </a>
          </div>
          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-             <img class="img-fluid" src="https://images.unsplash.com/photo-1563313285-4c1b4074b898?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1510&q=80" alt="">
+            <a class="portfolio-box" href="images/smartmockups_k07qn6w7.jpg">
+             <img class="img-fluid" src="images/smartmockups_k07qn6w7.jpg" alt="">
            <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">
-                 Category
+                <div class="project-category">
+                 Fully Responsive
                 </div>
                <div class="project-name">
-                Project Name
+                Toolshed
                 </div>
               </div>
            </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-           <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-             <img class="img-fluid" src="https://images.unsplash.com/photo-1563313285-4c1b4074b898?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1510&q=80" alt="">
+           <a class="portfolio-box" href="images/smartmockups_k07psy8q.jpg">
+             <img class="img-fluid" src="images/smartmockups_k07psy8q.jpg" alt="">
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">
-                  Category
+                <div class="project-category">
+                  Made with HTML,CSS,and JS
                 </div>
                 <div class="project-name">
-                  Project Name
+                  Toolshed
                 </div>
               </div>
            </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-             <img class="img-fluid" src="https://images.unsplash.com/photo-1563313285-4c1b4074b898?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1510&q=80" alt="">
+            <a class="portfolio-box" href="images/smartmockups_k07q7wgq.jpg">
+             <img class="img-fluid" src="images/smartmockups_k07q7wgq.jpg" alt="">
              <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">
-                  Category
+                <div class="project-category">
+                  Front End UI
                </div>
               <div class="project-name">
-                  Project Name
+                  Random Acts Generator
                </div>
              </div>
            </a>
          </div>
         <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-             <img class="img-fluid" src="https://images.unsplash.com/photo-1563313285-4c1b4074b898?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1510&q=80" alt="">
+            <a class="portfolio-box" href="images/smartmockups_k07qc47r.jpg">
+             <img class="img-fluid" src="images/smartmockups_k07qc47r.jpg" alt="">
               <div class="portfolio-box-caption">
-                <div class="project-category text-white-50">
-                  Category
+                <div class="project-category">
+                  Created with React, Redux, and React Hooks
                </div>
                <div class="project-name">
-                 Project Name
+                   Random Acts Generator
                </div>
               </div>
             </a>
          </div>
          <div class="col-lg-4 col-sm-6">
-           <a class="portfolio-box" href="https://github.com/use-my-tools-lambda-build-week/Use-My-Tools-UI-Carlos">
-             <img class="img-fluid" src="https://images.unsplash.com/photo-1563313285-4c1b4074b898?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1510&q=80" alt="">
+           <a class="portfolio-box" href="images/smartmockups_k07q9glm.jpg">
+             <img class="img-fluid" src="images/smartmockups_k07q9glm.jpg" alt="">
              <div class="portfolio-box-caption p-3">
-               <div class="project-category text-white-50">
-                 Market Landing Page
+               <div class="project-category">
+                 Designed with Styled Components
                 </div>
                 <div class="project-name">
-                  ToolShed
+                    Random Acts Generator
                 </div>
               </div>
             </a>
@@ -288,9 +289,9 @@
                 <a class="d-block" href="https://www.linkedin.com/in/carlos-santana-5468019b/">Profile</a>
             </div>
             <div class="col-lg-4 mr-auto text-center">
-                <i class="fas fa-file fa-3x mb-3 text-muted"></i>
-                <h5>Hmm</h5>
-                <a class="d-block" href="https://github.com/Carlossantana987">Carlossantana987</a>
+                <i class="fab fa-twitter fa-3x mb-3 text-muted"></i>
+                <h5>Twitter</h5>
+                <a class="d-block" href="https://twitter.com/lito_los">@lito_los</a>
             </div>
         </div>
     </div>
