--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <h2 class="text-white mt-0"> About Me</h2>
           <hr class="divider light my-4">
           <p class="text-white-20 mb-4">I am 26 years old and I live in St.Augustine Florida. Since I was a child computers have always been a passion. As I have gotten older my drive to understand what is happening under the hood has only become stronger. I enjoy programming because building the most simplistic application can defeat some of the most complex problems in the world. </p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="resume/Carlos_Santana_Resume (1).pdf">View Resume</a>
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="resume/Carlos_Santana_Resume.pdf">View Resume</a>
         </div>
       </div>
     </div>
@@ -128,7 +128,7 @@
             <i class="fab fa-html5" style="font-size:70px;color:#FD7E14"></i>
             <i class="fab fa-css3-alt" style="font-size:70px;color:#006DB1"></i>
             <h3 class="h4 mb-2">HTML & CSS</h3>
-            <p class="text-muted mb-0">Knowlege in HTML and CSS with proper semantics</p>
+            <p class="text-muted mb-0">Knowlege in HTML and CSS</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -281,7 +281,7 @@
             <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                 <i class="fas fa-file fa-3x mb-3 text-muted"></i>
                 <h5>Resume</h5>
-                <a class="d-block" href="resume/Carlos_Santana_Resume (1).pdf">Resume</a>
+                <a class="d-block" href="resume/Carlos_Santana_Resume.pdf">Resume</a>
             </div>
             <div class="col-lg-4 mr-auto text-center">
                 <i class="fab fa-linkedin fa-3x mb-3 text-muted"></i>
