changed some of the wording

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0"> About Me</h2>
           <hr class="divider light my-4">
-          <p class="text-white-20 mb-4">I am 26 years old and I live in St.Augustine Florida. Since I was a child computers have always been a passion. As I have gotten older my drive to understand what is happening under the hood has only become stronger. I enjoy programming because building the most simplistic application can defeat some of the most complex problems in the world. </p>
+          <p class="text-white-20 mb-4">I am a Full-Stack Developer seeking opportunity and growth. Easy to work with and a team player.Responsible and take ownership with everything I do.</p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="resume/Carlos_Santana_Resume.pdf">View Resume</a>
         </div>
       </div>
@@ -106,21 +106,21 @@
           <div class="mt-5">
             <i class="fab fa-react" style="font-size:70px;color:#61DAFB;"></i>
             <h3 class="h4 mb-2">React.js</h3>
-            <p class="text-muted mb-0"> Designing Single Page Application with knowledge of class components and hooks</p>
+            <p class="text-muted mb-0"> Knowledge with React using class components and hooks</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fab fa-js-square" style="font-size:70px;color:#F5DE19"></i>
             <h3 class="h4 mb-2">JavaScript</h3>
-            <p class="text-muted mb-0">Coding knowlege with latest ECMAScript</p>
+            <p class="text-muted mb-0">Coding knowledge with JavaScript</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fab fa-java" style="font-size:70px;color:#FD7E14"></i>
             <h3 class="h4 mb-2">Java</h3>
-            <p class="text-muted mb-0">Coding knowlege with Java and Maven Springboot</p>
+            <p class="text-muted mb-0">Coding knowledge with Java</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -128,7 +128,7 @@
             <i class="fab fa-html5" style="font-size:70px;color:#FD7E14"></i>
             <i class="fab fa-css3-alt" style="font-size:70px;color:#006DB1"></i>
             <h3 class="h4 mb-2">HTML & CSS</h3>
-            <p class="text-muted mb-0">Knowlege in HTML and CSS</p>
+            <p class="text-muted mb-0">Knowledge in HTML and CSS</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -142,21 +142,21 @@
           <div class="mt-5">
             <i class="fab fa-less" style="font-size:70px;color:#1D3F6C"></i>
             <h3 class="h4 mb-2">Less</h3>
-            <p class="text-muted mb-0">Knowledge in Node.js backend with Express</p>
+            <p class="text-muted mb-0">Knowledge with Less</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fab fa-envira" style="font-size:70px;color:green"></i>
             <h3 class="h4 mb-2">SpringBoot</h3>
-            <p class="text-muted mb-0">Knowledge in Node.js backend with Express</p>
+            <p class="text-muted mb-0">Knowledge with Springboot framework</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fab fa-sass" style="font-size:70px;color:#1D3F6C"></i>
             <h3 class="h4 mb-2">Sass</h3>
-            <p class="text-muted mb-0">Knowledge in Node.js backend with Express</p>
+            <p class="text-muted mb-0">Knowledge with Sass</p>
           </div>
         </div>
       </div>
