Small grammar changes and icon positions

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">FullStack Web Developer</p>
+          <p class="text-white-75 font-weight-light mb-5">Full-Stack Web Developer</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Learn More</a>
         </div>
       </div>
@@ -89,7 +89,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0"> About Me</h2>
           <hr class="divider light my-4">
-          <p class="text-white-20 mb-4">I am a Full-Stack Developer seeking opportunity and growth. Easy to work with and a team player.Responsible and take ownership with everything I do.</p>
+          <p class="text-white-20 mb-4">I am a Full-Stack Developer seeking opportunity and growth. Easy to work with and a team player. Responsible and take ownership with everything I do.</p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="resume/Carlos_Santana_Resume.pdf">View Resume</a>
         </div>
       </div>
@@ -99,7 +99,7 @@
   <!-- Services Section -->
   <section class="page-section" id="services">
     <div class="container">
-      <h2 class="text-center mt-0"> Technical Knowledge</h2>
+      <h2 class="text-center mt-0">Technical Knowledge</h2>
       <hr class="divider my-4">
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
@@ -266,9 +266,9 @@
           <div>+1 (904) 806-9733</div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
-          <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-          <h5>Email</h5>
-          <a class="d-block" href="mailto:carlossantana987@outlook.com">carlossantana987@outlook.com</a>
+          <i class="fas fa-file fa-3x mb-3 text-muted"></i>
+          <h5>Resume</h5>
+          <a class="d-block" href="resume/Carlos_Santana_Resume.pdf">Resume</a>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fab fa-github fa-3x mb-3 text-muted"></i>
@@ -279,9 +279,9 @@
         <p class="text-muted mb-5"></p>
         <div class="row">
             <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                <i class="fas fa-file fa-3x mb-3 text-muted"></i>
-                <h5>Resume</h5>
-                <a class="d-block" href="resume/Carlos_Santana_Resume.pdf">Resume</a>
+                <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
+                <h5>Email</h5>
+                <a class="d-block" href="resume/Carlos_Santana_Resume.pdf mailto:carlossantana987@outlook.com">carlossantana987@outlook.com</a>
             </div>
             <div class="col-lg-4 mr-auto text-center">
                 <i class="fab fa-linkedin fa-3x mb-3 text-muted"></i>
