added python to tech knowledge

--- a/index.html
+++ b/index.html
@@ -125,25 +125,25 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fab fa-html5" style="font-size:70px;color:#FD7E14"></i>
-            <i class="fab fa-css3-alt" style="font-size:70px;color:#006DB1"></i>
-            <h3 class="h4 mb-2">HTML & CSS</h3>
-            <p class="text-muted mb-0">Knowledge in HTML and CSS</p>
+              <i class="fab fa-python" style="font-size:70px;color:#0056b3"></i>
+              <h3 class="h4 mb-2">Python</h3>
+            <p class="text-muted mb-0">Coding knowledge with Python2 & 3</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fab fa-node-js" style="font-size:70px;color:"></i>
-            <h3 class="h4 mb-2">Node.js</h3>
-            <p class="text-muted mb-0">Knowledge in Node.js backend with Express</p>
-          </div>
+            <div class="mt-5">
+                <i class="fab fa-html5" style="font-size:70px;color:#FD7E14"></i>
+                <i class="fab fa-css3-alt" style="font-size:70px;color:#006DB1"></i>
+                <h3 class="h4 mb-2">HTML & CSS</h3>
+                <p class="text-muted mb-0">Knowledge in HTML and CSS</p>
+            </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fab fa-less" style="font-size:70px;color:#1D3F6C"></i>
-            <h3 class="h4 mb-2">Less</h3>
-            <p class="text-muted mb-0">Knowledge with Less</p>
-          </div>
+            <div class="mt-5">
+                <i class="fab fa-node-js" style="font-size:70px;color:"></i>
+                <h3 class="h4 mb-2">Node.js</h3>
+                <p class="text-muted mb-0">Knowledge in Node.js backend with Express</p>
+            </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
