--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-file fa-3x mb-3 text-muted"></i>
           <h5>Resume</h5>
-          <a class="d-block" href="resume/Carlos_Santana_Resume.pdf">Resume</a>
+          <a class="d-block" href="resume/CarlosSantana_Resume.pdf">Resume</a>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fab fa-github fa-3x mb-3 text-muted"></i>
@@ -281,7 +281,7 @@
             <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                 <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
                 <h5>Email</h5>
-                <a class="d-block" href="resume/Carlos_Santana_Resume.pdf mailto:carlossantana987@outlook.com">carlossantana987@outlook.com</a>
+                <a class="d-block" href="mailto:carlossantana987@outlook.com">carlossantana987@outlook.com</a>
             </div>
             <div class="col-lg-4 mr-auto text-center">
                 <i class="fab fa-linkedin fa-3x mb-3 text-muted"></i>
