--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <h2 class="text-white mt-0"> About Me</h2>
           <hr class="divider light my-4">
           <p class="text-white-20 mb-4">I am a Full-Stack Developer seeking opportunity and growth. Easy to work with and a team player. Responsible and take ownership with everything I do.</p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="resume/CarlosSantana_Resume.pdf">View Resume</a>
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="resume/Resume_2.pdf">View Resume</a>
         </div>
       </div>
     </div>
@@ -154,9 +154,9 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fab fa-sass" style="font-size:70px;color:#1D3F6C"></i>
-            <h3 class="h4 mb-2">Sass</h3>
-            <p class="text-muted mb-0">Knowledge with Sass</p>
+              <i class="fab fa-salesforce" style="font-size:70px;color:dodgerblue"></i>
+            <h3 class="h4 mb-2">SalesForce</h3>
+            <p class="text-muted mb-0">Admin & Develper Platform I Certified</p>
           </div>
         </div>
       </div>
@@ -268,7 +268,7 @@
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-file fa-3x mb-3 text-muted"></i>
           <h5>Resume</h5>
-          <a class="d-block" href="resume/CarlosSantana_Resume.pdf">Resume</a>
+          <a class="d-block" href="resume/Resume_2.pdf">Resume</a>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fab fa-github fa-3x mb-3 text-muted"></i>
