--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0"> About Me</h2>
           <hr class="divider light my-4">
-          <p class="text-white-20 mb-4">I am a Full-Stack Developer seeking opportunity and growth. Easy to work with and a team player. Responsible and take ownership with everything I do.</p>
+          <p class="text-white-20 mb-4">I am a Full-Stack Developer seeking opportunity and growth. Easy to work with and a team player. When given the chance to prove myself I go above and beyond what is required. Development has always been a passion of mine and ready to hit the ground running!</p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="resume/Resume_2.pdf">View Resume</a>
         </div>
       </div>
@@ -106,7 +106,7 @@
           <div class="mt-5">
             <i class="fab fa-react" style="font-size:70px;color:#61DAFB;"></i>
             <h3 class="h4 mb-2">React.js</h3>
-            <p class="text-muted mb-0"> Knowledge with React using class components and hooks</p>
+            <p class="text-muted mb-0"> Knowledge in React</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -149,14 +149,14 @@
           <div class="mt-5">
             <i class="fab fa-envira" style="font-size:70px;color:green"></i>
             <h3 class="h4 mb-2">SpringBoot</h3>
-            <p class="text-muted mb-0">Knowledge with Springboot framework</p>
+            <p class="text-muted mb-0">Knowledge in Springboot framework</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
               <i class="fab fa-salesforce" style="font-size:70px;color:dodgerblue"></i>
             <h3 class="h4 mb-2">SalesForce</h3>
-            <p class="text-muted mb-0">Admin & Develper Platform I Certified</p>
+            <p class="text-muted mb-0">Salesforce Knowlege using Apex and LWC. Also Admin and PD1 certified</p>
           </div>
         </div>
       </div>
@@ -268,7 +268,7 @@
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-file fa-3x mb-3 text-muted"></i>
           <h5>Resume</h5>
-          <a class="d-block" href="resume/Resume_2.pdf">Resume</a>
+          <a class="d-block" href="resume/RESUME.pdf">Resume</a>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fab fa-github fa-3x mb-3 text-muted"></i>
