cleaned up icons and small touches

--- a/index.html
+++ b/index.html
@@ -261,12 +261,12 @@
       </div>
       <div class="row">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-          <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
+          <i class="fas fa-tty fa-3x mb-3 text-muted"></i>
           <h5>Call or Text</h5>
           <div>+1 (904) 806-9733</div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
-          <i class="fas fa-file fa-3x mb-3 text-muted"></i>
+          <i class="far fa-address-card fa-3x mb-3 text-muted"></i>
           <h5>Resume</h5>
           <a class="d-block" href="resume/RESUME.pdf">Resume</a>
         </div>
@@ -289,9 +289,9 @@
                 <a class="d-block" href="https://www.linkedin.com/in/carlos-santana-5468019b/">Profile</a>
             </div>
             <div class="col-lg-4 mr-auto text-center">
-                <i class="fab fa-twitter fa-3x mb-3 text-muted"></i>
-                <h5>Twitter</h5>
-                <a class="d-block" href="https://twitter.com/lito_los">@lito_los</a>
+                <i class="fab fa-salesforce fa-3x mb-3 text-muted"></i>
+                <h5>TrailHead</h5>
+                <a class="d-block" href="https://trailblazer.me/id/carlosrs">Trailblazer Profile</a>
             </div>
         </div>
     </div>
@@ -300,19 +300,15 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019</div>
+      <div class="small text-center text-muted">Copyright &copy; 2020</div>
     </div>
   </footer>
 
-  <!-- Bootstrap core JavaScript -->
+
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Plugin JavaScript -->
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
   <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-
-  <!-- Custom scripts for this template -->
   <script src="js/creative.min.js"></script>
 
 </body>
